--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -48,23 +48,23 @@
                         @if (SignInManager.IsSignedIn(User))
                         {
                             <a class="texto-cabecera menu-dropdown-item" asp-page="/wishlist">
-                                @Herramientas.IdiomaBuscar.CogerCadena(idioma, "Layout.Wishlist")
+                                @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Wishlist")
                             </a>
                         }
                         
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/historicallow">
-                            @Herramientas.IdiomaBuscar.CogerCadena(idioma, "Layout.HistoricalLows")
+                            @Herramientas.Idiomas.CogerCadena(idioma, "Layout.HistoricalLows")
                         </a>
                         <hr>
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/subscriptions">
-                            @Herramientas.IdiomaBuscar.CogerCadena(idioma, "Layout.Subscriptions")
+                            @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Subscriptions")
                         </a>
                         <hr>
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/lastnews">
-                            @Herramientas.IdiomaBuscar.CogerCadena(idioma, "Layout.LastNews")
+                            @Herramientas.Idiomas.CogerCadena(idioma, "Layout.LastNews")
                         </a>
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/lastadded">
-                            @Herramientas.IdiomaBuscar.CogerCadena(idioma, "Layout.LastAdded")
+                            @Herramientas.Idiomas.CogerCadena(idioma, "Layout.LastAdded")
                         </a>
                     </div>
                 </div>
