--- a/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
@@ -14,7 +14,11 @@
 		</div>
 	</div>
 
-	@if (noticiaTipoSeleccionada == global::Noticias.NoticiaTipo.Suscripciones.ToString())
+	@if (noticiaTipoSeleccionada == global::Noticias.NoticiaTipo.Gratis.ToString())
+	{
+		
+	}
+	else if (noticiaTipoSeleccionada == global::Noticias.NoticiaTipo.Suscripciones.ToString())
 	{
 		<div class="opciones-combobox" style="width: 33%;">
 			<select @onchange="@(e => CambiarSuscripcion(e))">
@@ -42,7 +46,7 @@
 									}
 								}							
 
-								<img src="@Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcion.Suscripcion).Imagen" style="width: 12%; margin: 10px;" />
+								<img src="@Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcion.Tipo).Imagen" style="width: 12%; margin: 10px;" />
 								<div style="margin-left: 20px;">@suscripcion.Nombre</div>
 							</div>
 						</button>
@@ -178,22 +182,22 @@
 
 			if (lista.Count == 1)
 			{
-				tituloEn = tituloEn + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("en-US", "News.SubscriptionString1");
-				tituloEs = tituloEs + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("es-ES", "News.SubscriptionString1");
+				tituloEn = tituloEn + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + " " + Herramientas.Idiomas.CogerCadena("en-US", "News.SubscriptionString1");
+				tituloEs = tituloEs + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + " " + Herramientas.Idiomas.CogerCadena("es-ES", "News.SubscriptionString1");
 			}
 			else if (lista.Count == 2)
 			{
-				tituloEn = tituloEn + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("en-US", "News.SubscriptionString2") + " " +
-					BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[1])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("en-US", "News.SubscriptionString3");
-				tituloEs = tituloEs + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("es-ES", "News.SubscriptionString2") + " " +
-					BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[1])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("es-ES", "News.SubscriptionString3");
+				tituloEn = tituloEn + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + " " + Herramientas.Idiomas.CogerCadena("en-US", "News.SubscriptionString2") + " " +
+					BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[1])).Nombre + " " + Herramientas.Idiomas.CogerCadena("en-US", "News.SubscriptionString3");
+				tituloEs = tituloEs + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + " " + Herramientas.Idiomas.CogerCadena("es-ES", "News.SubscriptionString2") + " " +
+					BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[1])).Nombre + " " + Herramientas.Idiomas.CogerCadena("es-ES", "News.SubscriptionString3");
 			}
 			else if (lista.Count > 2)
 			{
 				tituloEn = tituloEn + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + ", " +
-					BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[1])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("en-US", "News.SubscriptionString4");
+					BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[1])).Nombre + " " + Herramientas.Idiomas.CogerCadena("en-US", "News.SubscriptionString4");
 				tituloEs = tituloEs + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + ", " +
-					BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[1])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("es-ES", "News.SubscriptionString4");
+					BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[1])).Nombre + " " + Herramientas.Idiomas.CogerCadena("es-ES", "News.SubscriptionString4");
 			}
 		}
 		else
@@ -209,18 +213,18 @@
 
 		if (lista != null)
 		{
-			contenidoEn = Herramientas.IdiomaBuscar.CogerCadena("en-US", "News.SubscriptionString5") + " " + Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcionSeleccionada).Nombre + " ";
-			contenidoEs = Herramientas.IdiomaBuscar.CogerCadena("es-ES", "News.SubscriptionString5") + " " + Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcionSeleccionada).Nombre + " ";
+			contenidoEn = Herramientas.Idiomas.CogerCadena("en-US", "News.SubscriptionString5") + " " + Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcionSeleccionada).Nombre + " ";
+			contenidoEs = Herramientas.Idiomas.CogerCadena("es-ES", "News.SubscriptionString5") + " " + Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcionSeleccionada).Nombre + " ";
 
 			if (lista.Count == 1)
 			{
-				contenidoEn = contenidoEn + Herramientas.IdiomaBuscar.CogerCadena("en-US", "News.SubscriptionString6");
-				contenidoEs = contenidoEs + Herramientas.IdiomaBuscar.CogerCadena("es-ES", "News.SubscriptionString6");
+				contenidoEn = contenidoEn + Herramientas.Idiomas.CogerCadena("en-US", "News.SubscriptionString6");
+				contenidoEs = contenidoEs + Herramientas.Idiomas.CogerCadena("es-ES", "News.SubscriptionString6");
 			}
 			else if (lista.Count > 1)
 			{
-				contenidoEn = contenidoEn + Herramientas.IdiomaBuscar.CogerCadena("en-US", "News.SubscriptionString7");
-				contenidoEs = contenidoEs + Herramientas.IdiomaBuscar.CogerCadena("es-ES", "News.SubscriptionString7");
+				contenidoEn = contenidoEn + Herramientas.Idiomas.CogerCadena("en-US", "News.SubscriptionString7");
+				contenidoEs = contenidoEs + Herramientas.Idiomas.CogerCadena("es-ES", "News.SubscriptionString7");
 			}
 
 			contenidoEn = contenidoEn + Environment.NewLine + "<ul>" + Environment.NewLine;
@@ -230,8 +234,8 @@
 			{
 				Juegos.JuegoSuscripcion suscripcion = BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(juego));
 
-				contenidoEn = contenidoEn + "<li><a href=" + Strings.ChrW(34) + Herramientas.EnlaceAcortador.Generar(suscripcion.Enlace, suscripcion.Suscripcion) + Strings.ChrW(34) + " target=" + Strings.ChrW(34) + "_blank" + Strings.ChrW(34) + ">" + suscripcion.Nombre + " (" + Juegos.JuegoDRM2.DevolverDRM(suscripcion.DRM) + ")</a></li>" + Environment.NewLine;
-				contenidoEs = contenidoEs + "<li><a href=" + Strings.ChrW(34) + Herramientas.EnlaceAcortador.Generar(suscripcion.Enlace, suscripcion.Suscripcion) + Strings.ChrW(34) + " target=" + Strings.ChrW(34) + "_blank" + Strings.ChrW(34) + ">" + suscripcion.Nombre + " (" + Juegos.JuegoDRM2.DevolverDRM(suscripcion.DRM) + ")</a></li>" + Environment.NewLine;
+				contenidoEn = contenidoEn + "<li><a href=" + Strings.ChrW(34) + Herramientas.EnlaceAcortador.Generar(suscripcion.Enlace, suscripcion.Tipo) + Strings.ChrW(34) + " target=" + Strings.ChrW(34) + "_blank" + Strings.ChrW(34) + ">" + suscripcion.Nombre + " (" + Juegos.JuegoDRM2.DevolverDRM(suscripcion.DRM) + ")</a></li>" + Environment.NewLine;
+				contenidoEs = contenidoEs + "<li><a href=" + Strings.ChrW(34) + Herramientas.EnlaceAcortador.Generar(suscripcion.Enlace, suscripcion.Tipo) + Strings.ChrW(34) + " target=" + Strings.ChrW(34) + "_blank" + Strings.ChrW(34) + ">" + suscripcion.Nombre + " (" + Juegos.JuegoDRM2.DevolverDRM(suscripcion.DRM) + ")</a></li>" + Environment.NewLine;
 			}
 
 			contenidoEn = contenidoEn + "</ul>";
