--- a/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
@@ -1,7 +1,7 @@
 ﻿@if (suscripcionesActivasChoice.Count > 0)
 {
-	<div id="@suscripcionesActivasChoice[0].Suscripcion" class="perfil" style="margin-bottom: 80px;">
-		<img src="@Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcionesActivasChoice[0].Suscripcion).Imagen" style="width: 20%; margin-bottom: 10px;" />
+	<div id="@suscripcionesActivasChoice[0].Tipo" class="perfil" style="margin-bottom: 80px;">
+		<img src="@Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcionesActivasChoice[0].Tipo).Imagen" style="width: 20%; margin-bottom: 10px;" />
 
 		<hr>
 
@@ -11,7 +11,7 @@
 				@foreach (var suscripcion in suscripcionesActivasChoice)
 				{
 					<div>
-						<a href="@Herramientas.EnlaceAcortador.Generar(suscripcion.Enlace, suscripcion.Suscripcion)" class="boton-pequeño" style="padding: 10px;" target="_blank">
+						<a href="@Herramientas.EnlaceAcortador.Generar(suscripcion.Enlace, suscripcion.Tipo)" class="boton-pequeño" style="padding: 10px;" target="_blank">
 							<div>
 								<img src="@suscripcion.Imagen" style="max-width: 100%; max-height: 100%;" />
 							</div>
@@ -29,8 +29,8 @@
 
 @if (suscripcionesActivasPrime.Count > 0)
 {
-	<div id="@suscripcionesActivasPrime[0].Suscripcion" class="perfil">
-		<img src="@Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcionesActivasPrime[0].Suscripcion).Imagen" style="width: 20%; margin-bottom: 10px;" />
+	<div id="@suscripcionesActivasPrime[0].Tipo" class="perfil">
+		<img src="@Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcionesActivasPrime[0].Tipo).Imagen" style="width: 20%; margin-bottom: 10px;" />
 
 		<hr>
 		
@@ -40,7 +40,7 @@
 				@foreach (var suscripcion in suscripcionesActivasPrime)
 				{
 					<div>
-						<a href="@Herramientas.EnlaceAcortador.Generar(suscripcion.Enlace, suscripcion.Suscripcion)" class="boton-pequeño" style="padding: 10px;" target="_blank">
+						<a href="@Herramientas.EnlaceAcortador.Generar(suscripcion.Enlace, suscripcion.Tipo)" class="boton-pequeño" style="padding: 10px;" target="_blank">
 							<div>
 								<img src="@suscripcion.Imagen" style="max-width: 100%; max-height: 100%;" />
 							</div>
@@ -71,11 +71,11 @@
 		{
 			if (DateTime.Now >= suscripcion.FechaEmpieza && DateTime.Now <= suscripcion.FechaTermina)
 			{
-				if (suscripcion.Suscripcion == global::Suscripciones2.SuscripcionTipo.HumbleChoice)
+				if (suscripcion.Tipo == global::Suscripciones2.SuscripcionTipo.HumbleChoice)
 				{
 					suscripcionesActivasChoice.Add(suscripcion);
 				}
-				else if (suscripcion.Suscripcion == global::Suscripciones2.SuscripcionTipo.PrimeGaming)
+				else if (suscripcion.Tipo == global::Suscripciones2.SuscripcionTipo.PrimeGaming)
 				{
 					suscripcionesActivasPrime.Add(suscripcion);
 				}
