--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -20,7 +20,7 @@
 	@if (await UsuarioCoger.RolDios(UserManager, User) == true)
 	{
 		<div style="margin-bottom: 80px; margin-left: -10px; width: 100%; display: flex; align-items: center;">
-			<a class="juego-boton-pequeño" href="/Admin/Juegos/Editar?id=@Model.juego.Id" target="_blank">Editar Juego</a>
+			<a class="juego-boton-pequeño" href="/Admin/Juegos/Editar?id=@Model.juego.Id">Editar Juego</a>
 
 			@if (Model.juego.IdSteam > 0)
 			{
@@ -65,7 +65,7 @@
 
 						@if (Model.juego.IdSteam > 0)
 						{
-							<input type="button" value="View on Steam" class="juego-boton-pequeño" style="margin-left: 10px;" onclick="window.open('@Herramientas.EnlaceAcortador.Generar("https://store.steampowered.com/app/" + Model.juego.IdSteam.ToString(), "steam")', '_blank')" target="_blank" />
+							<input type="button" value="@Herramientas.Idiomas.CogerCadena(Model.idioma, "Game.String1")" class="juego-boton-pequeño" style="margin-left: 10px;" onclick="window.open('@Herramientas.EnlaceAcortador.Generar("https://store.steampowered.com/app/" + Model.juego.IdSteam.ToString(), "steam")', '_blank')" target="_blank" />
 						}	
 					</div>
 				</div>
@@ -73,7 +73,7 @@
 				@if (Model.juego.Analisis != null)
 				{
 					<div class="juego-analisis">
-						<div class="juego-analisis-texto2">Rating on Steam</div>
+						<div class="juego-analisis-texto2">@Herramientas.Idiomas.CogerCadena(Model.idioma, "Game.String2")</div>
 
 						<div class="juego-analisis-display">
 							@if (int.Parse(Model.juego.Analisis.Porcentaje) > 74)
@@ -91,7 +91,7 @@
 								<img src="/imagenes/analisis/negative2.png" class="juego-analisis-imagen" />
 							}
 
-							<div class="juego-analisis-texto">@Model.juego.Analisis.Porcentaje% • @Calculadora.RedondearAnalisis(Model.juego.Analisis.Cantidad)</div>
+							<div class="juego-analisis-texto">@Model.juego.Analisis.Porcentaje% • @Calculadora.RedondearAnalisis(Model.idioma, Model.juego.Analisis.Cantidad)</div>
 						</div>
 					</div>				
 				}
@@ -103,7 +103,7 @@
 			{
 				@if (drm != JuegoDRM.NoEspecificado)
 				{
-					@if (Herramientas.JuegoFicha.VerificarMostrarDRM(drm, Model.juego) == true)
+					@if (Herramientas.JuegoFicha.VerificarMostrarDRM(Model.idioma, drm, Model.juego) == true)
 					{
 						@if (drm == JuegoDRM.DRMFree)
 						{
@@ -122,12 +122,12 @@
 		{
 			@if (drm != JuegoDRM.NoEspecificado)
 			{
-				@if (Herramientas.JuegoFicha.VerificarMostrarDRM(drm, Model.juego) == true)
+				@if (Herramientas.JuegoFicha.VerificarMostrarDRM(Model.idioma, drm, Model.juego) == true)
 				{
 					<div id="@drm">	
 						@if (SignInManager.IsSignedIn(User))
 						{
-							@(await Html.RenderComponentAsync<Componentes.Secciones.JuegoFichaDeseado>(RenderMode.ServerPrerendered, new { juego = Model.juego, drm = drm }))
+							@(await Html.RenderComponentAsync<Componentes.Secciones.JuegoFichaDeseado>(RenderMode.ServerPrerendered, new { idioma = Model.idioma, juego = Model.juego, drm = drm }))
 						}
 
 						<div class="juego-drm-centrado perfil-espacio-bottom">
@@ -143,9 +143,11 @@
 							</div>
 
 							<div class="perfil" style="width: 90%;">
-								@Html.Raw(Herramientas.JuegoFicha.CogerMinimoDRM(drm, Model.juego.PrecioMinimosHistoricos, Model.juego.PrecioActualesTiendas, true))
+								@Html.Raw(Herramientas.JuegoFicha.CogerMinimoDRM(Model.idioma, drm, Model.juego.PrecioMinimosHistoricos, Model.juego.PrecioActualesTiendas, true))
 
-								@Html.Raw(Herramientas.JuegoFicha.PrepararSuscripcion(Model.juego.Suscripciones, drm))
+								@Html.Raw(Herramientas.JuegoFicha.PrepararGratis(Model.idioma, Model.juego.Gratis, drm))
+
+								@Html.Raw(Herramientas.JuegoFicha.PrepararSuscripcion(Model.idioma, Model.juego.Suscripciones, drm))
 								
 								@if (Herramientas.JuegoFicha.OrdenarPrecios(Model.juego.PrecioActualesTiendas, drm, false).Count > 0)
 								{
@@ -157,7 +159,7 @@
 
 												<div class="juego-descuento-precio">
 													<div style="font-size: 14px; margin: 20px;">
-														@Calculadora.HaceTiempo(precio.FechaDetectado)
+														@Calculadora.HaceTiempo(precio.FechaDetectado, Model.idioma)
 													</div>
 
 													<div style="width: 75px; text-align: center;" class="juego-descuento">
@@ -174,7 +176,7 @@
 								}
 								else
 								{
-									<div>There are currently no deals for this platform</div>
+									<div>@Herramientas.Idiomas.CogerCadena(Model.idioma, "Game.String12")</div>
 								}
 							</div>
 						</div>
