--- a/pepeizqs deals web/Pages/Index.cshtml
+++ b/pepeizqs deals web/Pages/Index.cshtml
@@ -4,7 +4,7 @@
 @using Microsoft.AspNetCore.Builder;
 
 @{
-	ViewData["Title"] = Herramientas.IdiomaBuscar.CogerCadena(Model.idioma, "Index.Title");
+	ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "Index.Title");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
