--- a/pepeizqs deals web/Pages/News.cshtml
+++ b/pepeizqs deals web/Pages/News.cshtml
@@ -4,25 +4,7 @@
 @{
 	#nullable disable
 
-	string titulo = null;
-
-	if (Model.idioma != null)
-	{
-		if (Model.idioma == "es" || Model.idioma == "es-ES")
-		{
-			titulo = Model.noticia.TituloEs;
-		}
-		else
-		{
-			titulo = Model.noticia.TituloEn;
-		}
-	}
-	else
-	{
-		titulo = Model.noticia.TituloEn;
-	}
-
-	ViewData["Title"] = titulo;
+	ViewData["Title"] = Herramientas.Idiomas.MirarTexto(Model.idioma, Model.noticia.TituloEn, Model.noticia.TituloEs);
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
@@ -48,7 +30,7 @@
 		</div>
 
 		<div class="perfil" style="margin-top: 40px;">
-			@Html.Raw(Model.noticia.ContenidoEn)
+			@Html.Raw(Model.contenido)
 		</div>
 
 		@if (Model.fechaTermina != null)
@@ -62,14 +44,14 @@
 		{
 			<div class="perfil" style="margin-top: 40px;">
 				<div style="margin-bottom: 20px;">
-					Games in the database:
+					@Herramientas.Idiomas.CogerCadena(Model.idioma, "News.String5")
 				</div>
 
 				<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); gap: 20px;">
 					@foreach (var juego in Model.juegos)
 					{
 						<div style="max-width: 200px;">
-							<a href="game/@juego.Id" class="boton-pequeño" style="padding: 10px;" target="_blank">
+							<a href="game/@juego.Id" class="boton-pequeño" style="padding: 10px;">
 								<div>
 									<img src="@juego.Imagenes.Library_600x900" style="max-width: 100%; max-height: 100%;" />
 								</div>
